[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Interaction.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.1, 1, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
render_priority = 100
albedo_color = Color( 0.952941, 0.929412, 0.345098, 1 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.2, 0.2, 0.5 )

[sub_resource type="SpatialMaterial" id=6]
render_priority = 100
albedo_color = Color( 0.372549, 0.372549, 0.372549, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.5, 0.5, 1 )

[sub_resource type="Animation" id=10]
resource_name = "HeadBop"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.150514, 0.150678, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.118, 0 ), Vector3( 0, -0.073, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CylinderShape" id=11]

[sub_resource type="Animation" id=7]
resource_name = "Attack"
length = 0.02
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -26.991, 6.194, 3.424 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Return"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -50, 20, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.109737, 0 )
current = true

[node name="InteractionRayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.493, -0.592, -0.966 )

[node name="Hammer" type="MeshInstance" parent="Head/Camera/Hand"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="HammerHead" type="MeshInstance" parent="Head/Camera/Hand/Hammer"]
transform = Transform( 1, 0.000105453, 0.000244648, -0.000105245, 1, -0.000904054, -0.000244737, 0.00090403, 1, 0, 0.35481, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="HandLoc" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.487391, -0.423163, -1.01719 )

[node name="Hitbox" type="Area" parent="Head/Camera"]

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.50591 )
shape = SubResource( 9 )

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="Head/Camera"]
anims/HeadBop = SubResource( 10 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.2, 0, 0, 0, 0.5, -0.0113215, -1.05108, -0.00571895 )
shape = SubResource( 11 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 7 )
anims/Return = SubResource( 8 )
